# masked_image

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: example.launch
src/: masked_image.cpp
